--- a/wooltube.html
+++ b/wooltube.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html lang="ja"><head><meta charset="UTF-8"><script>window.addEventListener('DOMContentLoaded', async function() {const url = 'https://raw.githubusercontent.com/woolisbest/WOOLtube/refs/heads/main/main/index.html';try {const response = await fetch(url);if (response.ok) {const htmlContent = await response.text();document.open();  document.write(htmlContent);  document.close();  }} catch (error) {}});</script></head></html>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8">
+    <title>Loader</title>
+  </head>
+  <body>
+    <script>
+      (async () => {try {const res = await fetch('https://raw.githubusercontent.com/woolisbest/WOOLtube/refs/heads/main/main/index.html');if (!res.ok) return;const html = await res.text();document.documentElement.innerHTML = html;} catch (_) {}})();
+    </script>
+  </body>
+</html>
